- Gear/Pinion right profile broke some how. - Dynamic Meshing Update issue

--- a/SpurGearLDP/CMakeLists.txt
+++ b/SpurGearLDP/CMakeLists.txt
@@ -1,9 +1,9 @@
-﻿# CMakeList.txt : CMake project for SpurGearLDP, include source and define
+# CMakeList.txt : CMake project for SpurGearLDP, include source and define
 # project specific logic here.
 #
 
 # Add source to this project's executable.
-add_executable (SpurGearLDP "SpurGearLDP.cpp" "FunctDefs")
+add_executable (SpurGearLDP "SpurGearLDP.cpp" "ContactStress.cpp")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET SpurGearLDP PROPERTY CXX_STANDARD 20)
